@@ -21,6 +21,8 @@ dunno if it just me, but I had to add PREFIX a few places to get 'perl INSTALL_B
 > hardcoding scripts, and would instead need to record the new variable
 > at build time, like PREFIX is recorded in $installdir.
 >
+> Instead, let's ignore failure of the lines. [[done]]
+> 
 > --[[Joey]]
 
 <pre>
